--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start:db": "json-server --watch db.json",
-    "start:parcel": "parcel index.html",
-    "start": "concurrently npm:start:*"
+    "start:parcel": "http-server ./dist",
+    "start": "npm run build && concurrently npm:start:*",
+    "build": "webpack && cp index.html dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^5.0.0",
-    "parcel-bundler": "^1.12.4",
-    "typescript": "^3.7.2"
-  },
   "dependencies": {
     "axios": "^0.19.0",
-    "json-server": "^0.15.1"
+    "http-server": "^0.12.3",
+    "ts-loader": "^8.0.14",
+    "webpack": "^5.12.3",
+    "concurrently": "^5.0.0",
+    "json-server": "^0.15.1",
+    "typescript": "^3.7.2",
+    "webpack-cli": "^4.3.1"
   }
 }
