--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start:db": "json-server --watch db.json",
-    "start:parcel": "http-server",
+    "start:server": "http-server",
     "start": "npm run build && concurrently npm:start:*",
-    "build": "webpack"
+    "build": "rm -rf dist && webpack"
   },
   "keywords": [],
   "author": "",
@@ -21,5 +21,8 @@
     "json-server": "^0.15.1",
     "typescript": "^3.7.2",
     "webpack-cli": "^4.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20"
   }
 }
